# aws_mlops_demo

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  alertmanager.yml  deployment.yaml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  rules.yml  service.yaml
grafana_data/: grafana.db
src/: metrics.py  model_generation.py  utils.py
src/dags/: daily_training.py  deploy_job.py  test_model_git.py  training_timeout.py
src/model_deployment/: api_server.py
src/prometheus/: metrics_server.py
